server/src/parser/Tads2Parser.ts
// Generated from server/src/parser/Tads2.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { Tads2Listener } from "./Tads2Listener";
import { Tads2Visitor } from "./Tads2Visitor";


export class Tads2Parser extends Parser {
	public static readonly GRAMMAR = 1;
	public static readonly SWITCH = 2;
	public static readonly CASE = 3;
	public static readonly DEFAULT = 4;
	public static readonly FUNCTION = 5;
	public static readonly THROW = 6;
	public static readonly NEW = 7;
	public static readonly TEMPLATE = 8;
	public static readonly FOR = 9;
	public static readonly TRY = 10;
	public static readonly CATCH = 11;
	public static readonly FINALLY = 12;
	public static readonly ENUM = 13;
	public static readonly CLASS = 14;
	public static readonly TRANSIENT = 15;
	public static readonly MODIFY = 16;
	public static readonly REPLACE = 17;
	public static readonly PROPERTYSET = 18;
	public static readonly IF = 19;
	public static readonly DO = 20;
	public static readonly WHILE = 21;
	public static readonly ELSE = 22;
	public static readonly LOCAL = 23;
	public static readonly TRUE = 24;
	public static readonly NIL = 25;
	public static readonly INTRINSIC = 26;
	public static readonly INHERITED = 27;
	public static readonly DELEGATED = 28;
	public static readonly PROPERTY = 29;
	public static readonly DICTIONARY = 30;
	public static readonly EXPORT = 31;
	public static readonly EXTERN = 32;
	public static readonly PASS = 33;
	public static readonly DELETE = 34;
	public static readonly RETURN = 35;
	public static readonly STATIC = 36;
	public static readonly STRING = 37;
	public static readonly FOREACH = 38;
	public static readonly IN = 39;
	public static readonly SPREAD = 40;
	public static readonly RANGE = 41;
	public static readonly STEP = 42;
	public static readonly LITERAL_NOT = 43;
	public static readonly LITERAL_AND = 44;
	public static readonly LITERAL_OR = 45;
	public static readonly IS = 46;
	public static readonly BREAK = 47;
	public static readonly CONTINUE = 48;
	public static readonly GOTO = 49;
	public static readonly TOKEN = 50;
	public static readonly PRAGMA = 51;
	public static readonly OPERATOR = 52;
	public static readonly COMPOUND_WORD = 53;
	public static readonly FORMATSTRING = 54;
	public static readonly SPECIAL_WORDS = 55;
	public static readonly AT = 56;
	public static readonly AMP = 57;
	public static readonly HASH = 58;
	public static readonly NOT = 59;
	public static readonly OPTIONAL = 60;
	public static readonly IFNIL = 61;
	public static readonly PLUS = 62;
	public static readonly DIV = 63;
	public static readonly MOD = 64;
	public static readonly MINUS = 65;
	public static readonly NEQ = 66;
	public static readonly EQ = 67;
	public static readonly AND = 68;
	public static readonly OR = 69;
	public static readonly ARROW = 70;
	public static readonly TILDE = 71;
	public static readonly POW = 72;
	public static readonly ID = 73;
	public static readonly ASSIGN = 74;
	public static readonly NR = 75;
	public static readonly HEX = 76;
	public static readonly OCT = 77;
	public static readonly COLON = 78;
	public static readonly COMMA = 79;
	public static readonly DOT = 80;
	public static readonly STAR = 81;
	public static readonly BITWISE_OR = 82;
	public static readonly SEMICOLON = 83;
	public static readonly LEFT_PAREN = 84;
	public static readonly RIGHT_PAREN = 85;
	public static readonly LEFT_BRACKET = 86;
	public static readonly RIGHT_BRACKET = 87;
	public static readonly DSTR = 88;
	public static readonly SSTR = 89;
	public static readonly RSTR = 90;
	public static readonly LEFT_CURLY = 91;
	public static readonly RIGHT_CURLY = 92;
	public static readonly LTEQ = 93;
	public static readonly ARITHMETIC_LEFT = 94;
	public static readonly LT = 95;
	public static readonly GTEQ = 96;
	public static readonly GT = 97;
	public static readonly ARITHMETIC_RIGHT = 98;
	public static readonly LOGICAL_RIGHT_SHIFT = 99;
	public static readonly COMMENT = 100;
	public static readonly LINE_COMMENT = 101;
	public static readonly WS = 102;
	public static readonly ANY = 103;
	public static readonly RULE_program = 0;
	public static readonly RULE_directive = 1;
	public static readonly RULE_specialWordsDirective = 2;
	public static readonly RULE_formatStringDirective = 3;
	public static readonly RULE_compoundWordDirective = 4;
	public static readonly RULE_grammarDeclaration = 5;
	public static readonly RULE_grammarRules = 6;
	public static readonly RULE_itemList = 7;
	public static readonly RULE_qualifiers = 8;
	public static readonly RULE_item = 9;
	public static readonly RULE_enumDeclaration = 10;
	public static readonly RULE_propertyDeclaration = 11;
	public static readonly RULE_dictionaryDeclaration = 12;
	public static readonly RULE_exportDeclaration = 13;
	public static readonly RULE_functionDeclaration = 14;
	public static readonly RULE_objectDeclaration = 15;
	public static readonly RULE_array = 16;
	public static readonly RULE_curlyObjectBody = 17;
	public static readonly RULE_semiColonEndedObjectBody = 18;
	public static readonly RULE_superTypes = 19;
	public static readonly RULE_objectBody = 20;
	public static readonly RULE_property = 21;
	public static readonly RULE_paramsWithWildcard = 22;
	public static readonly RULE_method = 23;
	public static readonly RULE_codeBlock = 24;
	public static readonly RULE_stats = 25;
	public static readonly RULE_innerCodeBlock = 26;
	public static readonly RULE_gotoStatement = 27;
	public static readonly RULE_breakStatement = 28;
	public static readonly RULE_continueStatement = 29;
	public static readonly RULE_labelStatement = 30;
	public static readonly RULE_switchStatement = 31;
	public static readonly RULE_throwStatement = 32;
	public static readonly RULE_forInStatement = 33;
	public static readonly RULE_forEachStatement = 34;
	public static readonly RULE_passStatement = 35;
	public static readonly RULE_deleteStatement = 36;
	public static readonly RULE_returnStatement = 37;
	public static readonly RULE_doWhileStatement = 38;
	public static readonly RULE_whileStatement = 39;
	public static readonly RULE_forStatement = 40;
	public static readonly RULE_tryCatchStatement = 41;
	public static readonly RULE_callStatement = 42;
	public static readonly RULE_emptyStatement = 43;
	public static readonly RULE_sayStatement = 44;
	public static readonly RULE_assignmentStatement = 45;
	public static readonly RULE_ifStatement = 46;
	public static readonly RULE_enclosedExprCodeBlock = 47;
	public static readonly RULE_expr = 48;
	public static readonly RULE_primary = 49;
	public static readonly RULE_identifierAtom = 50;
	public static readonly RULE_params = 51;
	public static readonly RULE_optionallyTypedOptionalId = 52;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "directive", "specialWordsDirective", "formatStringDirective", 
		"compoundWordDirective", "grammarDeclaration", "grammarRules", "itemList", 
		"qualifiers", "item", "enumDeclaration", "propertyDeclaration", "dictionaryDeclaration", 
		"exportDeclaration", "functionDeclaration", "objectDeclaration", "array", 
		"curlyObjectBody", "semiColonEndedObjectBody", "superTypes", "objectBody", 
		"property", "paramsWithWildcard", "method", "codeBlock", "stats", "innerCodeBlock", 
		"gotoStatement", "breakStatement", "continueStatement", "labelStatement", 
		"switchStatement", "throwStatement", "forInStatement", "forEachStatement", 
		"passStatement", "deleteStatement", "returnStatement", "doWhileStatement", 
		"whileStatement", "forStatement", "tryCatchStatement", "callStatement", 
		"emptyStatement", "sayStatement", "assignmentStatement", "ifStatement", 
		"enclosedExprCodeBlock", "expr", "primary", "identifierAtom", "params", 
		"optionallyTypedOptionalId",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'grammar'", "'switch'", "'case'", "'default'", "'function'", 
		"'throw'", "'new'", "'template'", "'for'", "'try'", "'catch'", "'finally'", 
		"'enum'", "'class'", "'transient'", "'modify'", "'replace'", "'propertyset'", 
		"'if'", "'do'", "'while'", "'else'", "'local'", "'true'", "'nil'", "'intrinsic'", 
		"'inherited'", "'delegated'", "'property'", "'dictionary'", "'export'", 
		"'extern'", "'pass'", "'delete'", "'return'", "'static'", "'string'", 
		"'foreach'", "'in'", "'...'", "'..'", "'step'", "'not'", "'and'", "'or'", 
		"'is'", "'break'", "'continue'", "'goto'", "'token'", undefined, "'operator'", 
		"'compoundWord'", "'formatstring'", "'specialWords'", "'@'", "'&'", "'#'", 
		"'!'", "'?'", "'??'", "'+'", "'/'", "'%'", "'-'", "'!='", "'=='", "'&&'", 
		"'||'", "'->'", "'~'", "'^'", undefined, "'='", undefined, undefined, 
		undefined, "':'", "','", "'.'", "'*'", "'|'", "';'", "'('", "')'", "'['", 
		"']'", undefined, undefined, undefined, "'{'", "'}'", "'<='", "'<<'", 
		"'<'", "'>='", "'>'", "'>>'", "'>>>'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "GRAMMAR", "SWITCH", "CASE", "DEFAULT", "FUNCTION", "THROW", 
		"NEW", "TEMPLATE", "FOR", "TRY", "CATCH", "FINALLY", "ENUM", "CLASS", 
		"TRANSIENT", "MODIFY", "REPLACE", "PROPERTYSET", "IF", "DO", "WHILE", 
		"ELSE", "LOCAL", "TRUE", "NIL", "INTRINSIC", "INHERITED", "DELEGATED", 
		"PROPERTY", "DICTIONARY", "EXPORT", "EXTERN", "PASS", "DELETE", "RETURN", 
		"STATIC", "STRING", "FOREACH", "IN", "SPREAD", "RANGE", "STEP", "LITERAL_NOT", 
		"LITERAL_AND", "LITERAL_OR", "IS", "BREAK", "CONTINUE", "GOTO", "TOKEN", 
		"PRAGMA", "OPERATOR", "COMPOUND_WORD", "FORMATSTRING", "SPECIAL_WORDS", 
		"AT", "AMP", "HASH", "NOT", "OPTIONAL", "IFNIL", "PLUS", "DIV", "MOD", 
		"MINUS", "NEQ", "EQ", "AND", "OR", "ARROW", "TILDE", "POW", "ID", "ASSIGN", 
		"NR", "HEX", "OCT", "COLON", "COMMA", "DOT", "STAR", "BITWISE_OR", "SEMICOLON", 
		"LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", "DSTR", 
		"SSTR", "RSTR", "LEFT_CURLY", "RIGHT_CURLY", "LTEQ", "ARITHMETIC_LEFT", 
		"LT", "GTEQ", "GT", "ARITHMETIC_RIGHT", "LOGICAL_RIGHT_SHIFT", "COMMENT", 
		"LINE_COMMENT", "WS", "ANY",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(Tads2Parser._LITERAL_NAMES, Tads2Parser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return Tads2Parser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Tads2.g4"; }

	// @Override
	public get ruleNames(): string[] { return Tads2Parser.ruleNames; }

	// @Override
	public get serializedATN(): string { return Tads2Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(Tads2Parser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, Tads2Parser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << Tads2Parser.GRAMMAR) | (1 << Tads2Parser.ENUM) | (1 << Tads2Parser.CLASS) | (1 << Tads2Parser.TRANSIENT) | (1 << Tads2Parser.MODIFY) | (1 << Tads2Parser.REPLACE) | (1 << Tads2Parser.PROPERTY) | (1 << Tads2Parser.DICTIONARY) | (1 << Tads2Parser.EXPORT))) !== 0) || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & ((1 << (Tads2Parser.STRING - 37)) | (1 << (Tads2Parser.IN - 37)) | (1 << (Tads2Parser.STEP - 37)) | (1 << (Tads2Parser.IS - 37)) | (1 << (Tads2Parser.OPERATOR - 37)) | (1 << (Tads2Parser.COMPOUND_WORD - 37)) | (1 << (Tads2Parser.FORMATSTRING - 37)) | (1 << (Tads2Parser.SPECIAL_WORDS - 37)) | (1 << (Tads2Parser.PLUS - 37)))) !== 0) || _la === Tads2Parser.ID || _la === Tads2Parser.SEMICOLON) {
				{
				{
				this.state = 106;
				_localctx._directive = this.directive();
				_localctx._directives.push(_localctx._directive);
				}
				}
				this.state = 111;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 112;
			this.match(Tads2Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public directive(): DirectiveContext {
		let _localctx: DirectiveContext = new DirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, Tads2Parser.RULE_directive);
		try {
			this.state = 125;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 114;
				this.enumDeclaration();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 115;
				this.exportDeclaration();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 116;
				this.objectDeclaration();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 117;
				this.propertyDeclaration();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 118;
				this.dictionaryDeclaration();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 119;
				this.functionDeclaration();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 120;
				this.grammarDeclaration();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 121;
				this.compoundWordDirective();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 122;
				this.formatStringDirective();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 123;
				this.specialWordsDirective();
				}
				break;
